--- a/unset.html
+++ b/unset.html
@@ -1,30 +1,30 @@
-<h3 id="faq">Frequently asked questions</h3>
-<p>The first rule about fight club is that you do not talk about fight club.</p>
 <!DOCTYPE html>
 <html>
     <head>
     </head>
     <body>
-        <h1>My First Page</h1>
-        <p>This is my first page.</p>
-        <a href="#faq">Click here to read the Frequently Asked Questions</a>
-        <hr/>
-        <h3 id="faq">Frequently asked questions</h3>
-        <p>The first rule about fight club is that you do not talk about fight club.</p>
-        <p>However, if you do have questions, please e-mail me at foo@bar.com</p>
+        <p>This text is red.</p>
+        <div class="foo">
+            <p>This text is also red.</p>
+        </div>
+        <div class="bar">
+            <p>This text is green (default inherited value).</p>
+        </div>
 
-        <p>Here is a list of ordered items:</p>
-        <ol>
-            <li>First item</li>
-            <li>Second item</li>
-            <li>Third item</li>
-        </ol>
+        <p>This text has a red border.</p>
+        <div>
+            <p>This text has a red border.</p>
+        </div>
+        <div class="bar">
+            <p>This text has a black border (initial default, not inherited).</p>
+        </div>
 
-        <ul style="list-style-type: disc">
-            <li>First item</li>
-            <li>Second item</li>
-            <li>Third item</li>
-        </ul>
-
+        <!-- all-->
+        <div class="box">
+            initial value of display property is display: inline;
+        <div class="box">
+            some text
+        </div>
+        </div>
     </body>
 </html>
