--- a/basic-el.html
+++ b/basic-el.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <title>My test page</title>
     </head>
     <body>
         <h1>My First Page</h1>
