--- a/form-tabl.html
+++ b/form-tabl.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+		<meta charset="utf-8">
+		<title>My test page</title>
     </head>
     <body>
         <form action="/action_page.php">
