update css demo

--- a/demo-css/unset.html
+++ b/demo-css/unset.html
@@ -1,30 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="../css/unset-demo.css">
     </head>
     <body>
-        <p>This text is red.</p>
-        <div class="foo">
-            <p>This text is also red.</p>
-        </div>
+        <p>First Paragraph</p>
         <div class="bar">
             <p>This text is green (default inherited value).</p>
-        </div>
-
-        <p>This text has a red border.</p>
-        <div>
-            <p>This text has a red border.</p>
-        </div>
-        <div class="bar">
-            <p>This text has a black border (initial default, not inherited).</p>
         </div>
 
         <!-- all-->
         <div class="box">
             initial value of display property is display: inline;
-        <div class="box">
-            some text
-        </div>
+            <div class="box">
+                some text
+            </div>
         </div>
     </body>
 </html>
