--- a/demo-css/css-rule.html
+++ b/demo-css/css-rule.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>My test page</title>
-        <link rel="stylesheet" href="css/css-rule.css">
+        <title>Cascade and inheritance </title>
+        <link rel="stylesheet" href="../css/css-rule.css">
     </head>
     <body>
-        <h1>My First Page</h1>
+        <h1>Cascade and inheritance </h1>
 
         <h2 class="main-heading">This is my heading.</h2>
 
